# wezterm

./: .cirrus.yml  .gitignore  CHANGELOG-FORK.md  CONTRIBUTING.md  Cargo.toml  HOTKEYS.md  LICENSE.md  MUX-LOOP.md  MUX-TASKS.md  Makefile  PER-CLIENT-VIEW-STATE-TASKLIST.md  PER-CLIENT-VIEW-STATE.md  PR-DESCRIPTION.md  PRIVACY.md  README-DISTRO-MAINTAINER.md  README.md  RESIZE-LOOP.md  RESIZE-TASKS.md  check-pane-layout.py  check-tree-invariants.py  deploy.sh  generate-hotkeys.py  get-deps  install-user-service.sh  install.sh  mkdocs_macros.py  reproduce-interleaving.sh  stress-resize.sh  track-pane-sizes.py  upstream-show-keys.txt  wez-tabs  wrangler.toml
.githooks/: pre-commit
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug.yml  build-problem.md  config.yml
.github/workflows/: gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  nix-update-flake.yml  nix.yml  nix_continuous.yml  no-response.yml  pages.yml  termwiz.yml  wakterm_ssh.yml
assets/: open-wakterm-here  wakterm-nautilus.py  wakterm.appdata.xml  wakterm.desktop
assets/flatpak/: org.wezfurlong.wakterm.appdata.template.xml  org.wezfurlong.wakterm.json  org.wezfurlong.wakterm.template.json
assets/icon/: update.sh
assets/shell-completion/: bash  fish  zsh
assets/shell-integration/: wakterm.sh
bidi/: Cargo.toml  README.md
bidi/examples/: shaping.rs
bidi/src/: lib.rs
bidi/tests/: conformance.rs
ci/: PKGBUILD.template  add-color-screen-shots.sh  appimage.sh  build-docs.sh  check-rust-version.sh  create-release.sh  deploy.sh  flatpak.sh  fork-rust-loc.sh  generate-docs.py  generate-workflows.py  make-color-screen-shots.sh  make-flathub-pr.sh  make-winget-pr.sh  source-archive.sh  subst-release-info.py  update-derived-files.sh  wakterm-homebrew-macos.rb.template  wakterm-linuxbrew.rb.template  windows-installer.iss
codec/: Cargo.toml
codec/src/: lib.rs
color-types/: Cargo.toml
color-types/src/: lib.rs
config/: Cargo.toml
config/derive/: Cargo.toml
config/src/: background.rs  bell.rs  cell.rs  color.rs  config.rs  daemon.rs  exec_domain.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  scheme_data.rs  serial.rs  ssh.rs  terminal.rs  tls.rs  units.rs  unix.rs  version.rs  window.rs  wsl.rs
docs/: README.markdown  book.toml  build-targets.md  changelog.md  contributing.md  copymode.md  escape-sequences.md  faq.md  features.md  help.md  hyperlinks.md  imgcat.md  index.md  installation.md  mkdocs-base.yml  multiplexing.md  mux-server-memory.md  quickselect.md  scrollback.md  serial.md  shell-integration.md  sponsor.md  ssh.md  tab-bar-agent-icons.md  troubleshooting.md  what-is-a-terminal.md
docs/cli/: connect.md  general.md  imgcat.md  ls-fonts.md  record.md  replay.md  serial.md  set-working-directory.md  show-keys.md  ssh.md  start.md
docs/colorschemes/: browser.css  browser.js  data.json
docs/config/: appearance.md  default-keys.md  files.md  font-shaping.md  (+8 more)
env-bootstrap/: Cargo.toml
experiments/: recent-issues-200.tsv  results.tsv
filedescriptor/: Cargo.toml
licenses/: README.md
lua-api-crates/: README.md
luahelper/: Cargo.toml
mux/: Cargo.toml
nix/: flake.nix
procinfo/: Cargo.toml
pty/: Cargo.toml
scripts/: adopt-detected-harnesses.py  bench_mux_tab_latency.py  icon_simplify_review.py
sync-color-schemes/: Cargo.toml
systemd/: wakterm-mux-server.service
tabout/: Cargo.toml
term/: Cargo.toml  README.md
term/src/: color.rs  config.rs  input.rs  lib.rs  screen.rs  terminal.rs
term/src/terminalstate/: image.rs  iterm.rs  kitty.rs  mod.rs  performer.rs  sixel.rs
term/src/test/: mod.rs
termwiz/: CHANGELOG.md  Cargo.toml
termwiz/data/: wakterm.terminfo
termwiz/examples/: gennerdfonts.rs
termwiz/src/: error.rs  input.rs  lib.rs
termwiz/src/caps/: mod.rs  probed.rs
termwiz/src/render/: windows.rs
test-data/: extract-x11-icon.sh
vtparse/: Cargo.toml
wakterm/: Cargo.toml
wakterm-blob-leases/: Cargo.toml
wakterm-blob-leases/src/: lease_id.rs  simple_tempdir.rs
wakterm-cell/: Cargo.toml
wakterm-cell/src/: color.rs  image.rs  lib.rs
wakterm-char-props/: Cargo.toml
wakterm-char-props/codegen/: Cargo.toml
wakterm-client/: Cargo.toml
wakterm-dynamic/: Cargo.toml
wakterm-dynamic/derive/: Cargo.toml
wakterm-dynamic/derive/src/: attr.rs  fromdynamic.rs  todynamic.rs
wakterm-dynamic/src/: lib.rs  object.rs
wakterm-dynamic/tests/: fromdynamic.rs  todynamic.rs
wakterm-escape-parser/: Cargo.toml
wakterm-escape-parser/src/: color.rs  csi.rs  error.rs  hyperlink.rs  lib.rs  osc.rs
wakterm-escape-parser/src/tmux_cc/: mod.rs
wakterm-font/: Cargo.toml
wakterm-gui/: Cargo.toml  build.rs
wakterm-gui-subcommands/: Cargo.toml
wakterm-input-types/: Cargo.toml
wakterm-input-types/src/: lib.rs
wakterm-mux-server/: Cargo.toml
wakterm-mux-server-impl/: Cargo.toml
wakterm-mux-server/src/: main.rs  ossl.rs
wakterm-open-url/: Cargo.toml
wakterm-ssh/: Cargo.toml
wakterm-surface/: Cargo.toml
wakterm-surface/src/: cellcluster.rs  change.rs  hyperlink.rs  lib.rs
wakterm-surface/src/line/: cellref.rs  clusterline.rs  line.rs  test.rs  vecstorage.rs
wakterm-toast-notification/: Cargo.toml
wakterm-uds/: Cargo.toml
wakterm-version/: Cargo.toml  build.rs
wezterm/: Cargo.toml
wezterm-mux-server/: Cargo.toml
wezterm-mux-server-impl/: Cargo.toml
window/: Cargo.toml
(+649 files in other folders)
