[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
name = "wakterm-term"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/wakamex/wakterm"
description = "The Virtual Terminal Emulator core from wakterm; helpful for implementing terminal emulators"
license = "MIT"
documentation = "https://docs.rs/wakterm-term"
keywords = ["terminal", "emulator", "vte"]
readme = "README.md"

[features]
use_serde = ["termwiz/use_serde", "wakterm-cell/use_serde", "wakterm-escape-parser/use_serde", "wakterm-surface/use_serde"]

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
csscolorparser.workspace = true
downcast-rs.workspace = true
finl_unicode.workspace = true
hex.workspace = true
humansize.workspace = true
image.workspace = true
lazy_static.workspace = true
log.workspace = true
lru.workspace = true
miniz_oxide.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
serde = {workspace=true, features = ["rc"]}
terminfo.workspace = true
unicode-normalization.workspace = true
url.workspace = true
wakterm-bidi.workspace = true
wakterm-dynamic = {workspace = true, features=["std"]}
wakterm-cell = {workspace = true, features=["std", "use_image"]}
wakterm-escape-parser = {workspace = true, features=["std", "use_image"]}
wakterm-surface = {workspace = true, features=["std", "appdata", "use_image"]}

[dev-dependencies]
env_logger.workspace = true
k9.workspace = true

[dependencies.termwiz]
workspace = true
features = ["use_image"]
