[package]
authors = ["Wez Furlong"]
name = "termwiz"
version = "0.24.0"
edition = "2018"
repository = "https://github.com/wakamex/wakterm"
description = "Terminal Wizardry for Unix and Windows"
license = "MIT"
documentation = "https://docs.rs/termwiz"
keywords = ["terminal", "readline", "console", "curses"]
readme = "README.md"

[dependencies]
anyhow.workspace = true
bitflags = "2.0"
cassowary = {workspace=true, optional=true}
fancy-regex.workspace = true
filedescriptor.workspace = true
finl_unicode.workspace = true
fixedbitset.workspace = true
fnv = {workspace=true, optional=true}
image = {workspace=true, optional=true}
libc.workspace = true
log.workspace = true
memmem.workspace = true
num-derive.workspace = true
num-traits.workspace = true
ordered-float = {workspace = true, features=["std"]}
pest = {workspace=true, optional=true}
pest_derive = {workspace=true, optional=true}
phf.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
sha2 = {workspace=true, optional=true}
siphasher.workspace = true
terminfo.workspace = true
thiserror.workspace = true
ucd-trie.workspace = true
unicode-segmentation.workspace = true
vtparse.workspace = true
wakterm-bidi.workspace = true
wakterm-blob-leases = {workspace=true, optional=true}
wakterm-cell = {workspace = true, features=["std"]}
wakterm-char-props.workspace = true
wakterm-color-types = {workspace = true, features=["std"]}
wakterm-dynamic = {workspace = true, features=["std"]}
wakterm-escape-parser = {workspace = true, features=["std"]}
wakterm-input-types.workspace = true
wakterm-surface = {workspace = true, features=["std", "appdata"]}

[features]
default = ["image", "tmux_cc"]
widgets = ["cassowary", "fnv"]
use_serde = ["serde", "wakterm-color-types/use_serde", "wakterm-blob-leases/serde", "bitflags/serde", "wakterm-input-types/serde", "wakterm-escape-parser/use_serde", "wakterm-cell/use_serde", "wakterm-surface/use_serde"]
use_image = ["image", "dep:image", "wakterm-escape-parser/use_image", "wakterm-escape-parser/kitty-shm", "wakterm-cell/use_image", "wakterm-surface/use_image"]
image = ["sha2", "wakterm-blob-leases", "wakterm-escape-parser/image"]
tmux_cc = ["pest", "pest_derive", "wakterm-escape-parser/tmux_cc"]
docs = ["widgets", "use_serde", "image", "tmux_cc"]

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
k9.workspace = true

[target."cfg(unix)".dependencies]
signal-hook.workspace = true
termios.workspace = true
nix = {workspace=true, features=["mman", "fs"]}

[target."cfg(windows)".dependencies.winapi]
features = [
    "winbase",
    "winerror",
    "winnls",
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "synchapi",
    "memoryapi",
    "winnt",
    "impl-default"
]
workspace = true

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[[bench]]
name = "cell"
harness = false

