[package]
name = "wakterm-input-types"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2021"
repository = "https://github.com/wakamex/wakterm"
description = "config serialization for wakterm via dynamic json-like data values"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
euclid.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
wakterm-dynamic.workspace = true

[features]
default = ["serde", "std"]
std = ["serde/std", "euclid/std"]
